[gd_scene load_steps=3 format=3 uid="uid://wh15633vccmc"]

[ext_resource type="Script" uid="uid://sjpjw81ok8w1" path="res://examples/power_grid/power_grid.gd" id="1_l5wup"]
[ext_resource type="PackedScene" uid="uid://b6x0le533a4t3" path="res://visual_manager.tscn" id="2_l5wup"]

[node name="PowerGrid" type="Node2D"]
script = ExtResource("1_l5wup")

[node name="VisualManager" parent="." instance=ExtResource("2_l5wup")]

[connection signal="create_node_on_position" from="VisualManager" to="." method="_on_visual_manager_create_node_on_position"]
[connection signal="create_node_on_position_and_connect" from="VisualManager" to="." method="_on_visual_manager_create_node_on_position_and_connect"]
